# ilib-sd.cpp

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: update_submodules_issue.yml
ac-local-plugin/: CMakeLists.txt  loader-schema.json
ac-local-plugin/code/: CMakeLists.txt  LocalSD.cpp  WhisperModelSchema.hpp  aclp-sd-interface.hpp
ac-local-plugin/example/: CMakeLists.txt  ep-text-to-image.cpp
ac-local-plugin/schema/: CMakeLists.txt
ac-local-plugin/schema-gen/: CMakeLists.txt  schema-gen.cpp
ac-local-plugin/schema/ac/schema/: SDCpp.hpp
code/: CMakeLists.txt
code/ac/sd/: Init.cpp  Init.hpp  Instance.cpp  Instance.hpp  Logging.cpp  Logging.hpp  Model.cpp  Model.hpp  ResourceCache.cpp  ResourceCache.hpp  export.h  utils.cpp  utils.hpp
example/: CMakeLists.txt  e-basic.cpp  e-gui.cpp
test/: CMakeLists.txt  t-integration.cpp
